# plc-test-suite

./: .gitignore  CLAUDE.md  PLC-Test-Suite.spec  QUICK_START.md  README.md  pyproject.toml
examples/: tank_fill_test.yaml
plc_test_suite/: __init__.py  main.py  plc_connection.py  sim_module.py  sim_tab.py  syntax_highlighter.py  tag_browser.py  trend_tab.py  user_inputs.py
tests/: test_editor_smoke.py  test_run_modes.py  test_trend.py
{plc_test_suite,tests,examples}/: Module 1.simmod
