[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plc-test-suite"
version = "1.26.06.02"
description = "GUI-based test suite for Allen-Bradley PlantPAx simulation"
authors = [{name = "Joel Ryan", email = "joel.ryan22@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "pycomm3>=1.2.0",
    "PyQt6>=6.4.0",
    "PyQt6-QScintilla>=2.14",
    "jedi>=0.19",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
plc-test-suite = "plc_test_suite.main:main"

[project.gui-scripts]
plc-test-suite-gui = "plc_test_suite.main:main"
